apply sidebar icon alignment fixes to every skin

--- a/template/2/css/style.css
+++ b/template/2/css/style.css
@@ -91,7 +91,7 @@ form {
 	font-size: 14px;
 }
 
-.menuitemsidebar, .menuitemsidebarlong {
+.menuitemsidebar {
 	width: 143px;
 	height: 40px;
 	margin-top: 1px;
@@ -101,19 +101,19 @@ form {
 	transition: background-image 0.125s ease-in-out;
 }
 
-.menuitemsidebar:hover, .menuitemsidebarlong:hover {
+.menuitemsidebar:hover {
 	width: 143px;
 	height: 40px;
 	background: url("../images/mainSidebarOver.png")  no-repeat;
 }
 
-.menuitemsidebar img, .menuitemsidebarlong img {
+.menuitemsidebar img {
 	float: right;
 	position: relative;
 	pointer-events: none;
 }
 
-.menuitemsidebar a, .menuitemsidebarlong a  {
+.menuitemsidebar a {
 	font-weight: bold;
 	color: #FFFFFF;
 	display:inline-block;
