--- a/template/4/css/style.css
+++ b/template/4/css/style.css
@@ -105,13 +105,13 @@ form {
 	padding-right: 2px;
 }
 
-.menuitem, .menuitemsidebar, .menuitemsidebarlong {
+.menuitem, .menuitemsidebar {
 	padding: 1px;
 	margin-top: 1px;
 	margin-bottom: 1px;
 }
 
-.menuitemsidebar img, .menuitemsidebarlong img {
+.menuitemsidebar img {
 	display: none;
 }
 
