--- a/template/5/css/style.css
+++ b/template/5/css/style.css
@@ -67,13 +67,13 @@ form {
 	margin-left: 0px;
 }
 
-.menuitem, .menuitemsidebar, .menuitemsidebarlong {
+.menuitem, .menuitemsidebar {
 	padding: 1px;
 	margin-top: 1px;
 	margin-bottom: 1px;
 }
 
-.menuitemsidebar img, .menuitemsidebarlong img {
+.menuitemsidebar img {
 	display: none;
 }
 
