--- a/template/6/css/style.css
+++ b/template/6/css/style.css
@@ -72,13 +72,13 @@ form {
 	margin-left: 4px;
 }
 
-.menuitem, .menuitemsidebar, .menuitemsidebarlong {
+.menuitem, .menuitemsidebar {
 	padding: 1px;
 	margin-top: 1px;
 	margin-bottom: 1px;
 }
 
-.menuitemsidebar img, .menuitemsidebarlong img {
+.menuitemsidebar img {
 	display: none;
 }
 
