--- a/template/8/css/style.css
+++ b/template/8/css/style.css
@@ -97,8 +97,8 @@ form {
 	font-size: 14px;
 }
 
-.menuitemsidebar, .menuitemsidebarlong {
-	width: 143px;
+.menuitemsidebar {
+	width: 142px;
 	height: 40px;
 	margin-top: 1px;
 	background: url("../images/mainSidebar.png")  no-repeat;
@@ -107,22 +107,14 @@ form {
 	transition: background-image 0.125s ease-in-out;
 }
 
-.menuitemsidebar:hover, .menuitemsidebarlong:hover {
-	width: 143px;
-	height: 40px;
+.menuitemsidebar:hover {
 	background: url("../images/mainSidebarOver.png")  no-repeat;
 }
 
-.menuitemsidebar img, .menuitemsidebarlong img {
+.menuitemsidebar img {
 	float: right;
 	position: relative;
 	pointer-events: none;
-	margin-top: -8px;
-	margin-right: 10px;
-}
-.menuitemsidebarlong img {
-	margin-top: -32px;
-	margin-right: 10px;
 }
 
 .menuitemsidebar a {
@@ -131,36 +123,11 @@ form {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width:100%;
-	height:80%;
 	text-shadow: 2px 2px #222222;
-	padding-top: 9px;
 	padding-left: 8px;
-	z-index: 1000;
 }
 
 .menuitemsidebar a:hover, .menuitemsidebar a:active {
-	text-decoration: none;
-}
-
-.menuitemsidebarlong a {
-	font-weight: bold;
-	color: #FFFFFF;
-	display:inline-block;
-	width:100%;
-	height:80%;
-	text-shadow: 2px 2px #222222;
-	padding-top: 0px;
-	padding-left: 8px;
-	z-index: 1000;
-}
-
-.menuitemsidebarlong a span {
-	width: 60%;
-	display: block;
-}
-
-.menuitemsidebarlong a:hover, .menuitemsidebarlong a:active {
 	text-decoration: none;
 }
 
